--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt = 'Desk with office elements'/>
             <h2>Search Engine Optimization</h2>
             <p>
