--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </div>
     </header>
-    <div class="hero"></div>
+    <figure class="hero"></figure>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt = 'Desk with office elements'/>
