--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </header>
     <figure class="hero"></figure>
-    <div class="content">
+    <article class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt = 'Desk with office elements'/>
             <h2>Search Engine Optimization</h2>
@@ -47,8 +47,8 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
-    <div class="benefits">
+    </article>
+    <article class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="engine inside a funnel above a coin"/>
@@ -70,7 +70,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </article>
     <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
